10월 2일 관련 버그 수정